Fix truncated incident description
Incident last line in description was cut in editing form --> adding padding

--- a/incidents/static/custom_css/fir.css
+++ b/incidents/static/custom_css/fir.css
@@ -794,6 +794,7 @@ body
 
 .CodeMirror {
     height: 300px !important;
+	padding-bottom: 27em !important;
 }
 
 .editor-toolbar .table {
